--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
   .header_professional {
     padding-top: 12vh;
-    padding-left: 3vw;
+    padding-left: 5vw;
   }
 
   .header_professional-name {
@@ -412,11 +412,23 @@
     top: 11vh;
   }
 
-  .header_professional-elipse-white {
+  .header_professiona-container-photo {
     position: absolute;
-    width: 37vw;
     right: 4vw;
     top: 3.5vh;
+  }
+
+  .header_professional-photo {
+    position: absolute;
+    top: 1.5vh;
+    left: 1.5vw;
+    width: 90%;
+  }
+
+  .header_professional-elipse-white {
+
+    width: 37vw;
+
   }
 </style>
 </head>
@@ -436,9 +448,9 @@
       <div class="header_professional">
         <img class="header_professional-elipse-blue" src="./assets/img/elipse-blue.svg">
         <img class="header_professional-elipse-yellow" src="./assets/img/elipse-yellow.svg">
-        <div>
+        <div class="header_professiona-container-photo">
           <img class="header_professional-elipse-white" src="./assets/img/elipse-white.svg">
-          <!-- <img src="./assets/img/benjamin-parker-OhKElOkQ3RE-unsplash@2x.png"> -->
+          <img class="header_professional-photo" src="./assets/img/perfil.png">
         </div>
       </div>
     </section>
