--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
   :root {
-    font-size: 22px;
+    font-size: 14px;
     font-family: 'Roboto', sans-serif;
     color: #121212;
   }
@@ -373,14 +373,14 @@
 
   }
 
-  .divider{
+  .divider {
     background-color: #eaebeb;
     height: 3px;
     border: none;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
   }
 
-  .container{
+  .container {
     margin: 0 5vw;
   }
 
@@ -392,7 +392,7 @@
   }
 
   .header_professional-name {
-    font: 300 2.3rem Roboto;
+    font: 300 3.3rem Roboto;
 
   }
 
@@ -400,8 +400,8 @@
     font-weight: bold;
 
     color: #777777;
-    font-size: .8rem;
-    line-height: 1.5rem;
+    font-size: 1.3rem;
+    line-height: 1.5;
 
   }
 
@@ -456,18 +456,53 @@
 
   }
 
-  ul.info_contacts li {
-    display: inline;
-    line-height: 2;
+  .info_contacts {
+    font-size: 1.3rem;
+
   }
 
-  .info_contacts img {
-    margin-right: .4rem;
-    width: 1rem;
+  ul.info_contacts li {
+    display: inline;
+
+    line-height: 2;
+
   }
 
   .info_contacts li:not(:first-child) {
     margin-left: .5rem;
+
+  }
+
+  .info_contacts img {
+    margin-right: .4rem;
+    width: 2vw;
+
+  }
+
+  /* About */
+  .about-title {
+    margin-bottom: 1rem;
+
+  }
+
+  .about-title span {
+    color: #464646;
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: 500;
+
+  }
+
+  .about-title img {
+    margin-right: 1rem;
+    width: 2.7vw;
+
+  }
+
+  .about-text {
+    line-height: 1.2;
+    word-spacing: 1px;
+
   }
 </style>
 </head>
@@ -523,15 +558,43 @@
       </ul>
       <hr class="divider">
     </section>
+
     <section class="about">
+      <div class="about-title">
+        <span><img src="./assets/img/about.svg"> Sobre</span>
+      </div>
+      <div class="about-text">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit praesentium sequi omnis repudiandae
+          accusantium, iste atque porro possimus, fugiat placeat explicabo? Quis nulla magnam earum sint quidem maiores
+          maxime nobis tenetur, fuga sunt nesciunt ipsum consectetur? Tempore reprehenderit, eum voluptas necessitatibus
+          sit labore porro. Laborum, voluptatem quas natus aspernatur reiciendis quia ipsam repellat inventore sapiente
+          amet molestiae maiores quis id distinctio doloremque, voluptates neque tempore perspiciatis quasi. Magnam,
+          mollitia, quae atque veniam omnis eos accusantium odit rerum minima similique consequatur non, aliquid rem.
+          Quisquam nisi error ad exercitationem ut beatae. Voluptas ea quis explicabo magnam dignissimos quam harum
+          ducimus laudantium id impedit, atque possimus voluptatibus cum nesciunt nam animi iure placeat aliquid saepe
+          obcaecati voluptatem expedita incidunt molestias. Quo placeat eaque quasi repellat maxime eligendi minus saepe
+          eos facilis, ab facere, assumenda eveniet commodi quos alias reprehenderit. Molestias amet voluptates fuga
+          repellat alias quis officia suscipit laboriosam fugiat rerum dignissimos et quidem quisquam eum, voluptatem
+          culpa odio deleniti! Fugiat hic perspiciatis, ab veritatis reiciendis officiis optio, quas eligendi laborum
+          fuga voluptas possimus! Quasi voluptatem eaque nihil iure voluptatibus harum amet nostrum non? Optio tenetur
+          facilis, possimus et quas vel necessitatibus? Sunt repudiandae ratione itaque nam nemo velit recusandae
+          voluptas accusamus!
+        </p>
+      </div>
+      <hr class="divider">
 
     </section>
+
     <section class="professional_information">
 
+
     </section>
+
     <section class="city">
 
     </section>
+
     <section class="footer">
 
     </section>
