criando dados profissionais

--- a/index.html
+++ b/index.html
@@ -373,15 +373,34 @@
 
   }
 
+  .container {
+    margin: 0 5vw;
+  }
+
+  .professional_icon {
+    margin-bottom: 1rem;
+
+  }
+
+  .professional_icon span {
+    color: #464646;
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: 500;
+
+  }
+
+  .professional_icon img {
+    margin-right: 1rem;
+    width: 2.7vw;
+
+  }
+
   .divider {
     background-color: #eaebeb;
     height: 3px;
     border: none;
     margin: 1.5rem 0;
-  }
-
-  .container {
-    margin: 0 5vw;
   }
 
   /* Header */
@@ -480,29 +499,18 @@
   }
 
   /* About */
-  .about-title {
-    margin-bottom: 1rem;
-
-  }
-
-  .about-title span {
-    color: #464646;
-    display: flex;
-    font-size: 1.5rem;
-    font-weight: 500;
-
-  }
-
-  .about-title img {
-    margin-right: 1rem;
-    width: 2.7vw;
-
-  }
 
   .about-text {
     line-height: 1.2;
     word-spacing: 1px;
 
+  }
+
+  /* Professional information */
+  ul.professional_information li {
+    display: inline;
+    margin-right: 20rem;
+    line-height: 2;
   }
 </style>
 </head>
@@ -560,7 +568,7 @@
     </section>
 
     <section class="about">
-      <div class="about-title">
+      <div class="professional_icon">
         <span><img src="./assets/img/about.svg"> Sobre</span>
       </div>
       <div class="about-text">
@@ -583,11 +591,32 @@
         </p>
       </div>
       <hr class="divider">
-
     </section>
 
     <section class="professional_information">
-
+      <div class="professional_icon">
+        <span><img src="./assets/img/profissionais.svg">Dados Profissionais</span>
+      </div>
+      <div class="professional_information-text">
+        <ul class="professional_information">
+          <li>
+            <strong>Tipo de contratação:</strong> CLT/PJ
+          </li>
+          <li>
+            <strong>Pretensão salarial CLT:</strong> R$10.000,00
+          </li>
+          <li>
+            <strong>Tempo de atuação:</strong> +5 anos
+          </li>
+          <li>
+            <strong>Pretensão salarial PJ:</strong> R$10.000,00
+          </li>
+          <li>
+            <strong>Última remuneração</strong> R$10.000,00
+          </li>
+        </ul>
+      </div>
+      <hr class="divider">
 
     </section>
 
