terminando a pagina de soft-skill

--- a/informacoes.html
+++ b/informacoes.html
@@ -427,8 +427,10 @@
     <section class="certifications">
       <div class="professional_icon">
         <h2 class="professional_icon-title">
-          <h2 class="professional_icon-title"><img class="certifications-icon" src="assets/img/certificacoes.svg"
-              alt="">Certificações e ferramentas</h2>
+          <span class="professional_icon-title">
+            <img class="certifications-icon" src="assets/img/certificacoes.svg" alt="">
+            Certificações e ferramentas
+          </span>
         </h2>
       </div>
       <div>
