--- a/soft-skill.html
+++ b/soft-skill.html
@@ -370,35 +370,37 @@
       <div class="professional_icon">
         <h2 class="professional_icon-title">
           <span class="professional_icon-title languages-title">
-            <img class="certifications-icon" src="assets/img/languages.svg" alt=""> <span
-            >Idiomas</span>
+            <img class="certifications-icon" src="assets/img/languages.svg" alt="">
+            <span>Idiomas</span>
           </span>
         </h2>
       </div>
       <div>
         <table class="languages_language_list">
-          <tr>
-            <td>
-              <p>Chinês (simplificado)</p>
-              <p><strong>Conversação:</strong> Avançado</p>
-              <p><strong>Leitura:</strong> Intermediário</p>
-              <p><strong>Escrita:</strong> Básico</p>
-            </td>
+          <tbody>
+            <tr>
+              <td>
+                <p>Chinês (simplificado)</p>
+                <p><strong>Conversação:</strong> Avançado</p>
+                <p><strong>Leitura:</strong> Intermediário</p>
+                <p><strong>Escrita:</strong> Básico</p>
+              </td>
 
-            <td>
-              <p>Inglês</p>
-              <p><strong>Conversação:</strong> Intermediário</p>
-              <p><strong>Leitura:</strong> Avançado</p>
-              <p><strong>Escrita:</strong> Intermediário</p>
-            </td>
+              <td>
+                <p>Inglês</p>
+                <p><strong>Conversação:</strong> Intermediário</p>
+                <p><strong>Leitura:</strong> Avançado</p>
+                <p><strong>Escrita:</strong> Intermediário</p>
+              </td>
 
-            <td>
-              <p>Português</p>
-              <p><strong>Conversação:</strong> Básico</p>
-              <p><strong>Leitura:</strong> Básico</p>
-              <p><strong>Escrita:</strong> Avançado</p>
-            </td>
-          </tr>
+              <td>
+                <p>Português</p>
+                <p><strong>Conversação:</strong> Básico</p>
+                <p><strong>Leitura:</strong> Básico</p>
+                <p><strong>Escrita:</strong> Avançado</p>
+              </td>
+            </tr>
+          </tbody>
         </table>
         <hr class="divider">
       </div>
@@ -420,139 +422,143 @@
       </div>
       <div>
         <table class="soft-skill_list">
-          <tr>
-            <td class="soft-skill_behavioral">
-              <p>Características Comportamentais</p>
-              <p>Habilidades sócio-emocionais relacionadas ao comportamento do profissional no ambiente de trabalho.</p>
-              <table>
-                <tr>
-                  <ul>
-                    <li>
-                      <img src="assets/img/behavioral/01_comportamental.svg" alt="">
-                      <span>Autonomia</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/02_comportamental.svg" alt="">
-                      <span>Comunicação</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/03_comportamental.svg" alt="">
-                      <span>Criatividade/Solução de problemas complexos</span>
+          <tbody>
+            <tr>
+              <td>
+                <table class="soft-skill_behavioral">
+                  <td>
+                    <p>Características Comportamentais</p>
+                    <p>
+                      Habilidades sócio-emocionais relacionadas ao comportamento do profissional no ambiente de
+                      trabalho.
+                    </p>
+                    <ul>
+                      <li>
+                        <img src="assets/img/behavioral/01_comportamental.svg" alt="">
+                        <span>Autonomia</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/02_comportamental.svg" alt="">
+                        <span>Comunicação</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/03_comportamental.svg" alt="">
+                        <span>Criatividade/Solução de problemas complexos</span>
 
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/04_comportamental.svg" alt="">
-                      <span>Trabalho em
-                        equipe/Colaboração</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/05_comportamental.svg" alt="">
-                      <span>Visão estratégica</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/06_comportamental.svg" alt="">
-                      <span>Resiliência</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/07_comportamental.svg" alt="">
-                      <span>Relacionamento interpessoal</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/08_comportamental.svg" alt="">
-                      <span>Perfil hands on (mão na massa)</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/09_comportamental.svg" alt="">
-                      <span>Pensamento crítico</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/10_comportamental.svg" alt="">
-                      <span>Negociação/Persuasão</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/11_comportamental.svg" alt="">
-                      <span>Liderança</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/12_comportamental.svg" alt="">
-                      <span>Inteligência emocional</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/13_comportamental.svg" alt="">
-                      <span>Gestão do tempo</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/14_comportamental.svg" alt="">
-                      <span>Gestão de conflitos</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/behavioral/15_comportamental.svg" alt="">
-                      <span>Empreendedorismo corporativo</span>
-                    </li>
-                  </ul>
-                </tr>
-              </table>
-            </td>
-            <td class="soft-skill_motivators">
-              <p>Motivadores</p>
-              <p>Os motivadores são as razões que impulsionam as pessoas na sua vida profissional.</p>
-              <table>
-                <tr>
-                  <ul>
-                    <li>
-                      <img src="assets/img/motivators/01_motivadores.svg" alt="">
-                      <span>Autonomia</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/02_motivadores.svg" alt="">
-                      <span>Salário/Benefícios</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/03_motivadores.svg" alt="">
-                      <span>Mobilidade/Logística</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/04_motivadores.svg" alt="">
-                      <span>Reputação da marca</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/05_motivadores.svg" alt="">
-                      <span>Propósito da empresa</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/06_motivadores.svg" alt="">
-                      <span>Oportunidade de viagem</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/07_motivadores.svg" alt="">
-                      <span>Impacto social</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/08_motivadores.svg" alt="">
-                      <span>Cargo/Hierarquia</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/09_motivadores.svg" alt="">
-                      <span> Exposição</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/10_motivadores.svg" alt="">
-                      <span>Ambiente físico</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/11_motivadores.svg" alt="">
-                      <span>Lorem ipsum</span>
-                    </li>
-                    <li>
-                      <img src="assets/img/motivators/12_motivadores.svg" alt="">
-                      <span>Trabalho remoto</span>
-                    </li>
-                  </ul>
-                </tr>
-              </table>
-            </td>
-          </tr>
-
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/04_comportamental.svg" alt="">
+                        <span>Trabalho em
+                          equipe/Colaboração</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/05_comportamental.svg" alt="">
+                        <span>Visão estratégica</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/06_comportamental.svg" alt="">
+                        <span>Resiliência</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/07_comportamental.svg" alt="">
+                        <span>Relacionamento interpessoal</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/08_comportamental.svg" alt="">
+                        <span>Perfil hands on (mão na massa)</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/09_comportamental.svg" alt="">
+                        <span>Pensamento crítico</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/10_comportamental.svg" alt="">
+                        <span>Negociação/Persuasão</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/11_comportamental.svg" alt="">
+                        <span>Liderança</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/12_comportamental.svg" alt="">
+                        <span>Inteligência emocional</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/13_comportamental.svg" alt="">
+                        <span>Gestão do tempo</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/14_comportamental.svg" alt="">
+                        <span>Gestão de conflitos</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/behavioral/15_comportamental.svg" alt="">
+                        <span>Empreendedorismo corporativo</span>
+                      </li>
+                    </ul>
+                  </td>
+                </table>
+              </td>
+              <td>
+                <table class="soft-skill_motivators">
+                  <td>
+                    <p>Motivadores</p>
+                    <p>Os motivadores são as razões que impulsionam as pessoas na sua vida profissional.</p>
+                    <ul>
+                      <li>
+                        <img src="assets/img/motivators/01_motivadores.svg" alt="">
+                        <span>Autonomia</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/02_motivadores.svg" alt="">
+                        <span>Salário/Benefícios</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/03_motivadores.svg" alt="">
+                        <span>Mobilidade/Logística</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/04_motivadores.svg" alt="">
+                        <span>Reputação da marca</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/05_motivadores.svg" alt="">
+                        <span>Propósito da empresa</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/06_motivadores.svg" alt="">
+                        <span>Oportunidade de viagem</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/07_motivadores.svg" alt="">
+                        <span>Impacto social</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/08_motivadores.svg" alt="">
+                        <span>Cargo/Hierarquia</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/09_motivadores.svg" alt="">
+                        <span> Exposição</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/10_motivadores.svg" alt="">
+                        <span>Ambiente físico</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/11_motivadores.svg" alt="">
+                        <span>Lorem ipsum</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/motivators/12_motivadores.svg" alt="">
+                        <span>Trabalho remoto</span>
+                      </li>
+                    </ul>
+                  </td>
+                </table>
+              </td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </section>
