sobre/sobre-sem-foto ok

--- a/informacoes.html
+++ b/informacoes.html
@@ -143,13 +143,6 @@
       padding: 0;
     }
 
-    button:-moz-focusring,
-    [type="button"]:-moz-focusring,
-    [type="reset"]:-moz-focusring,
-    [type="submit"]:-moz-focusring {
-      outline: 1px dotted ButtonText;
-    }
-
     fieldset {
       padding: 0.35em 0.75em 0.625em;
     }
@@ -190,13 +183,6 @@
       height: auto;
     }
 
-    [type="search"] {
-      -webkit-appearance: textfield;
-      /* 1 */
-      outline-offset: -2px;
-      /* 2 */
-    }
-
     [type="search"]::-webkit-search-decoration {
       -webkit-appearance: none;
     }
@@ -222,6 +208,11 @@
 
     [hidden] {
       display: none;
+    }
+
+    @page {
+      margin: 0;
+      padding: 0;
     }
 
     html,
@@ -336,11 +327,6 @@
       list-style: none;
     }
 
-    blockquote,
-    q {
-      quotes: none;
-    }
-
     blockquote:before,
     blockquote:after,
     q:before,
@@ -354,6 +340,7 @@
       border-spacing: 0;
     }
   </style>
+
 
   <!-- Style -->
   <link rel="stylesheet" href="style.css">
