--- a/sobre.html
+++ b/sobre.html
@@ -326,7 +326,7 @@
     ul {
       list-style: none;
     }
-    
+
     blockquote:before,
     blockquote:after,
     q:before,
@@ -396,8 +396,6 @@
           eu porttitor vitae, faucibus ornare mi. Donec dignissim tristique odio, sed finibus justo tempor sed. Vivamus
           felis dui, bibendum eu lobortis ut, porta ac ipsum. Integer aliquam eu arcu vitae vestibulum. Aenean id ex ac
           quam lacinia lobortis eros.
-          <br>
-
         </p>
       </div>
       <hr class="divider">
@@ -445,22 +443,22 @@
 
     <section class="city">
       <div class="professional_icon">
-        <span><img src="./assets/img/profissionais.svg">Cidades de atuação</span>
+        <span><img src="./assets/img/pin-blue.svg">Dados Profissionais</span>
       </div>
       <div class="city_text professional_info">
         <p>
           <strong>Cidades de atuação:</strong>
-          <br>
-          <span>
-            São Paulo - SP, Santos - SP, São Vicente - SP, Campinas - SP, Osasco - SP, Rio de Janeiro - RJ
-          </span>
+        </p>
+        <br>
+        <p class="list">
+          São Paulo - SP, Santos - SP, São Vicente - SP, Campinas - SP, Osasco - SP, Rio de Janeiro - RJ
         </p>
       </div>
     </section>
 
     <section class="footer">
       <p class="footer_pagination">
-        <img src="assets/img/logo-modo.svg"> <span> Página 1/5 </span>
+        <img src="assets/img/logo-modo.svg"><span>Página 1/5</span>
       </p>
     </section>
   </div>
