--- a/habilidades-tecnicas.html
+++ b/habilidades-tecnicas.html
@@ -143,13 +143,6 @@
       padding: 0;
     }
 
-    button:-moz-focusring,
-    [type="button"]:-moz-focusring,
-    [type="reset"]:-moz-focusring,
-    [type="submit"]:-moz-focusring {
-      outline: 1px dotted ButtonText;
-    }
-
     fieldset {
       padding: 0.35em 0.75em 0.625em;
     }
@@ -190,13 +183,6 @@
       height: auto;
     }
 
-    [type="search"] {
-      -webkit-appearance: textfield;
-      /* 1 */
-      outline-offset: -2px;
-      /* 2 */
-    }
-
     [type="search"]::-webkit-search-decoration {
       -webkit-appearance: none;
     }
@@ -222,6 +208,11 @@
 
     [hidden] {
       display: none;
+    }
+
+    @page {
+      margin: 0;
+      padding: 0;
     }
 
     html,
@@ -334,11 +325,6 @@
     ol,
     ul {
       list-style: none;
-    }
-
-    blockquote,
-    q {
-      quotes: none;
     }
 
     blockquote:before,
