--- a/sobre-sem-foto.html
+++ b/sobre-sem-foto.html
@@ -143,13 +143,6 @@
       padding: 0;
     }
 
-    button:-moz-focusring,
-    [type="button"]:-moz-focusring,
-    [type="reset"]:-moz-focusring,
-    [type="submit"]:-moz-focusring {
-      outline: 1px dotted ButtonText;
-    }
-
     fieldset {
       padding: 0.35em 0.75em 0.625em;
     }
@@ -190,13 +183,6 @@
       height: auto;
     }
 
-    [type="search"] {
-      -webkit-appearance: textfield;
-      /* 1 */
-      outline-offset: -2px;
-      /* 2 */
-    }
-
     [type="search"]::-webkit-search-decoration {
       -webkit-appearance: none;
     }
@@ -222,6 +208,11 @@
 
     [hidden] {
       display: none;
+    }
+
+    @page {
+      margin: 0;
+      padding: 0;
     }
 
     html,
@@ -336,11 +327,6 @@
       list-style: none;
     }
 
-    blockquote,
-    q {
-      quotes: none;
-    }
-
     blockquote:before,
     blockquote:after,
     q:before,
@@ -354,6 +340,7 @@
       border-spacing: 0;
     }
   </style>
+
 
   <!-- Style -->
   <link rel="stylesheet" href="style.css">
@@ -376,38 +363,20 @@
         <img class="header_shapes-elipse-blue" src="./assets/img/elipse-blue.svg">
         <img class="no_picture_header_shapes-elipse-yellow" src="./assets/img/elipse-yellow.svg">
         <img class="no_picture_header_shapes-elipse-grey" src="./assets/img/elipse-grey.svg">
-
-
       </div>
     </section>
 
     <section class="info">
-      <ul class="info_contacts">
-        <li>
-          <span><img src="assets/img/profile.svg">23 anos</span>
-        </li>
-        <li>
-          <span><img src="assets/img/phone.svg">(11) 91823 3032</span>
-        </li>
-        <li>
-          <span><img src="assets/img/mail.svg">joao.silva@moovenconsulting.com.br</span>
-        </li>
-        <li>
-          <span><img src="assets/img/pin.svg">Osasco, São Paulo, Brasil</span>
-        </li>
-        <li>
-          <span><img src="assets/img/linkedin.svg">linkedin.com/in/joaosilva</span>
-        </li>
-        <li>
-          <span><img src="assets/img/web.svg">joao.silva.com.br</span>
-        </li>
-        <li>
-          <span><img src="assets/img/facebook.svg">facebook.com/Joao-Silva/</span>
-        </li>
-        <li>
-          <span><img src="assets/img/youtube.svg">youtube.com/c/joaosilva</span>
-        </li>
-      </ul>
+      <div class="info_contacts">
+        <span><img src="assets/img/profile.svg">23 anos</span>
+        <span><img src="assets/img/phone.svg">(11) 91823 3032</span>
+        <span><img src="assets/img/mail.svg">joao.silva@moovenconsulting.com.br</span>
+        <span><img src="assets/img/pin.svg">Osasco, São Paulo, Brasil</span>
+        <span><img src="assets/img/linkedin.svg">linkedin.com/in/joaosilva</span>
+        <span><img src="assets/img/web.svg">joao.silva.com.br</span>
+        <span><img src="assets/img/youtube.svg">youtube.com/c/joaosilva</span>
+        <span><img src="assets/img/facebook.svg">facebook.com/Joao-Silva/</span>
+      </div>
       <hr class="divider">
     </section>
 
@@ -425,19 +394,9 @@
           molestie lacinia consectetur. Fusce tincidunt sodales sapien vel ultrices. Nam scelerisque risus sit amet
           purus tempor, vestibulum vestibulum eros vestibulum. Vivamus sed semper nisl. Pellentesque nulla mi, elementum
           eu porttitor vitae, faucibus ornare mi. Donec dignissim tristique odio, sed finibus justo tempor sed. Vivamus
-          felis dui, bibendum eu lobortis ut, porta ac ipsum. Integer aliquam eu arcu vitae vestibulum. Aenean id ex ac
-          quam lacinia lobortis eros.
-          <br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id purus felis. Vivamus a ornare ex, et imperdiet
-          dui. Integer sollicitudin orci et ante dignissim, eget gravida sapien euismod. Nullam in justo porttitor,
-          vulputate diam eu, dignissim nisl. Morbi a neque magna. Etiam a magna fermentum, porta est efficitur, faucibus
-          nunc. Nulla facilisi. Fusce eros ligula, vulputate sit amet mauris quis, porttitor lacinia mi. Pellentesque
-          congue mauris ac eleifend convallis. Mauris semper maximus neque, sit amet faucibus lectus tempus a. Aliquam
-          molestie lacinia consectetur. Fusce tincidunt sodales sapien vel ultrices. Nam scelerisque risus sit amet
-          purus tempor, vestibulum vestibulum eros vestibulum. Vivamus sed semper nisl. Pellentesque nulla mi, elementum
-          eu porttitor vitae, faucibus ornare mi. Donec dignissim tristique odio, sed finibus justo tempor sed. Vivamus
-          felis dui, bibendum eu lobortis ut, porta ac ipsum. Integer aliquam eu arcu vitae vestibulum. Aenean id ex ac
-          quam lacinia.
+          felis dui, bibendum eu lobortis ut, portas ac ipsum. Integer aliquam eu arcu vitae vestibulum. Aenean id ex ac
+          quam lacinia lobortis erros.
+
         </p>
       </div>
       <hr class="divider">
@@ -447,7 +406,7 @@
       <div class="professional_icon">
         <span><img src="./assets/img/profissionais.svg">Dados Profissionais</span>
       </div>
-      <div class="professional_information_text professional_info">
+      <div class="professional_information-text professional_info">
         <table>
           <tr>
             <td class="professional_information_text-col-1">
@@ -457,17 +416,18 @@
                 </p>
 
                 <p>
-                  Tipo de atuação: <span>+5 anos</span>
-                </p>
-                <p>
                   Pretensão salarial PJ: <span>R$10.000,00</span>
+                </p>
+
+                <p>
+                  Pretensão salarial CLT: <span>R$10.000,00</span>
                 </p>
               </table>
             </td>
             <td class="professional_information_text-col-2">
               <table>
                 <p>
-                  Pretensão salarial CLT: <span>R$10.000,00</span>
+                  Tipo de atuação: <span>+5 anos</span>
                 </p>
 
                 <p>
@@ -479,26 +439,25 @@
         </table>
       </div>
       <hr class="divider">
-
     </section>
     <section class="city">
       <div class="professional_icon">
-        <span><img src="./assets/img/profissionais.svg">Cidades de atuação</span>
+        <span><img src="./assets/img/pin-blue.svg">Cidades de atuação</span>
       </div>
       <div class="city_text professional_info">
         <p>
           <strong>Cidades de atuação:</strong>
-          <br>
-          <span>
-            São Paulo - SP, Santos - SP, São Vicente - SP, Campinas - SP, Osasco - SP, Rio de Janeiro - RJ
-          </span>
+        </p>
+        <br>
+        <p>
+          São Paulo - SP, Santos - SP, São Vicente - SP, Campinas - SP, Osasco - SP, Rio de Janeiro - RJ
         </p>
       </div>
     </section>
 
     <section class="footer">
       <p class="footer_pagination">
-        <img src="assets/img/logo-modo.svg"> <span> Página 1/5 </span>
+        <img src="assets/img/logo-modo.svg"><span>Página 1/5</span>
       </p>
     </section>
   </div>
