--- a/informacoes.html
+++ b/informacoes.html
@@ -351,7 +351,7 @@
   <img class="background" src="./assets/img/bg2.svg">
   <div class="container">
     <section class="header">
-      <div class="header_professional">
+      <div class="header_professional header_information">
         <h1 class="header_professional-name header_professional-name-information"><strong>João</strong> Aparecido Silva
         </h1>
       </div>
